SCR #430041 - fix: overflow

--- a/src/engine-scss/layouts/profile/base/themes/_default.scss
+++ b/src/engine-scss/layouts/profile/base/themes/_default.scss
@@ -69,7 +69,7 @@
     .wlc-sections__profile-menu--theme-default {
 
         > .container {
-            overflow: hidden;
+            @include bm.get-mq-map('overflow', $profileSettings, 'overflow');
         }
     }
 }
